# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Draw_Reaction_zhiyix2"
version = "0.2.0"
authors = [
  { name="Zhiying Xie", email="zhiyix2@uw.edu" },
]
description = "A package for drawing compound reaction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tk",
    'tomli; python_version < "3.10"',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zhiyix2/Draw_Reaction"
"Bug Tracker" = "https://github.com/zhiyix2/Draw_Reaction"

[project.scripts]
Draw_Reaction = "Draw_Reaction.__main__:main"